<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_margin="20dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/home_box"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="20dp" >

    <TextView
        android:id="@+id/sortOptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/sortOption"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#202020" />

    <Button
        android:id="@+id/sortByTitleButton"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/home_box"
        android:text="@string/sortByTitle" />

    <Button
        android:id="@+id/sortByAuthorButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/home_box"
        android:text="@string/sortByAuthor" />

    <Button
        android:id="@+id/sortByLastReadButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/home_box"
        android:text="@string/sortByLastRead" />
    <Button
        android:id="@+id/sortByDownloadButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/home_box"
        android:text="@string/sortByDownload" />

</LinearLayout>