<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res/com.skytree.epubtest"
    android:id="@+id/settingScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/layout"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/doublePagedCheckBox"
                android:layout_alignBottom="@+id/doublePagedCheckBox"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:text="@string/doublepaged"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/doublePagedCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="20dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/lockRotationCheckBox"
                android:layout_alignBottom="@+id/lockRotationCheckBox"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:text="@string/lockrotation"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/lockRotationCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="20dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/globalPaginationCheckBox"
                android:layout_alignBottom="@+id/globalPaginationCheckBox"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:text="@string/globalPagination"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/globalPaginationCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="20dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/theme"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:baselineAligned="true" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/themeWhiteImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/themewhite"
                    android:padding="5dp"
                    android:src="@drawable/themewhite" />

                <Button
                    android:id="@+id/themeWhiteButton"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@android:color/transparent" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/themeBrownImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/themebrown"
                    android:padding="5dp"
                    android:src="@drawable/themebrown" />

                <Button
                    android:id="@+id/themeBrownButton"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@android:color/transparent" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/themeBlackImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/themeblack"
                    android:padding="5dp"
                    android:src="@drawable/themeblack" />

                <Button
                    android:id="@+id/themeBlackButton"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@android:color/transparent" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/pagetransitioneffect"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/pageTransitionGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp" >

            <RadioButton
                android:id="@+id/noneRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/noneeffect"
                android:textSize="17sp" />

            <RadioButton
                android:id="@+id/slideRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slideeffect"
                android:textSize="17sp" />

            <RadioButton
                android:id="@+id/curlRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/curleffect"
                android:textSize="17sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/TextView20"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/voice"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/mediaOverlayCheckBox"
                android:layout_alignBottom="@+id/mediaOverlayCheckBox"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:text="@string/mediaoverlay"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/mediaOverlayCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="20dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/ttsCheckBox"
                android:layout_alignBottom="@+id/ttsCheckBox"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:text="@string/tts"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/ttsCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="20dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/autoStartPlayingCheckBox"
                android:layout_alignBottom="@+id/autoStartPlayingCheckBox"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:text="@string/autostartplaying"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/autoStartPlayingCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="20dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/autoLoadNewChapterCheckBox"
                android:layout_alignBottom="@+id/autoLoadNewChapterCheckBox"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:text="@string/autoloadnewchapter"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/autoLoadNewChapterCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="20dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/highlightTextToVoiceCheckBox"
                android:layout_alignBottom="@+id/highlightTextToVoiceCheckBox"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:text="@string/highlighttexttoVoice"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/highlightTextToVoiceCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="20dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/informationTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/information"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/readerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/reader"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/skyepubTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/skyepub"
            android:textColor="#FFFF00"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>